--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "DeerHacks",
   "short_name": "DeerHacks",
-  "description": "DeerHacks is the largest annual hackathon at University of Toronto Mississauga. Join us on February 27 - March 1, 2026 for a weekend of prizes, development, and innovation!",
+  "description": "DeerHacks is the largest annual hackathon at University of Toronto Mississauga. Join us on February 27 - March 1, 2026 for a weekend of development, learning, and innovation!",
   "icons": [
     {
       "src": "/icons/192.png",
